--- a/Page002.html
+++ b/Page002.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is Page002</title>
+    <p>master has been changed</p>
 </head>
 <body>
     
